@@ -1907,7 +1907,7 @@ asm_statement
 
         seqPointNo++;
         ex = newNode(INLINEASM, NULL, NULL);
-        ex->values.inlineasm = copyStr ($3);
+        ex->values.inlineasm = copyStr ($3, NULL);
         seqPointNo++;
         $$ = ex;
      }
